# zephyr-dev

./: .gitignore  west.yml
applications/app/: CMakeLists.txt  prj.conf
applications/app/boards/: esp32s3_luatos_core_simple_procpu_usb.overlay
applications/app/src/: main.c  main_pwm_led.c  main_pwm_led_fade.c  main_thread.c
applications/app_custom_dts_binding/boards/: esp32s3_luatos_core_simple_procpu_usb.overlay
applications/app_custom_dts_binding/src/: main.c
applications/app_display/: Kconfig  prj.conf
applications/app_display/boards/: esp32s3_luatos_core_simple_procpu_usb.overlay
applications/app_display/src/: main.c
applications/app_lckfb/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
applications/app_lckfb/boards/: esp32s3_lckfb_procpu_usb.overlay
applications/app_lckfb/src/: es8311_test.c  main.c  qmi8658_test.c
applications/app_mqtt/: CMakeLists.txt  Kconfig  overlay-static-insecure.conf  prj.conf  sample.yaml
applications/app_mqtt/boards/: esp32s3_luatos_core_simple_procpu_usb.overlay
applications/app_mqtt/socs/: esp32s3_procpu_usb.conf
applications/app_mqtt/src/: device.c  device.h  main.c  mgmt.c  mgmt.h  mqtt_client.c  mqtt_client.h  wifi_sta.c  wifi_sta.h
applications/app_wifi_shell/: prj.conf
applications/app_wifi_shell/socs/: esp32s3_procpu.conf
applications/app_wifi_shell/src/: main.c
drivers/: CMakeLists.txt  Kconfig
drivers/audio/: CMakeLists.txt  Kconfig
drivers/audio/es8311/: CMakeLists.txt  CONVERSION_SUMMARY.md  (+7 more)
drivers/sensor/: CMakeLists.txt  Kconfig
dts/bindings/: power-switch.yaml  vendor-prefixes.txt
(+11 files in other folders)
